--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="stylesheets/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="javascript/js.js"></script>
 
-<script type="text/javascript">
-$(document).ready(function(){
-  let rotate = 0;
-$(".quater").click(function(){rotate = rotate + 90;
-  $(this).css({"transform": "rotate("+rotate+"deg)"
-  });
-});
-})
+<!-- <script type="text/javascript">
 
-</script>
+</script> -->
+
   </head>
   <body>
     <div class="box">
