--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="javascript/jQuere.3.5.1.js"></script>
 <script src="javascript/js.js"></script>
 
 <!-- <script type="text/javascript">
@@ -13,21 +14,36 @@
 
   </head>
   <body>
-    <div class="box">
-    <div class="quater"></div>
-    <div class="quater"></div>
-    <div class="quater"></div>
-    <div class="quater"></div>
-    <div class="quater"></div>
+    <section class="begin">
+      <div class="head">
+        <p>мерч шрифтовых иллюзий impress</p>
 
-    <div class="box_1">
-    <div class="quater small "></div>
-    <div class="quater small "></div>
-    <div class="quater small "></div>
-    <div class="quater small "></div>
-    </div>
-    <div class="quater"></div>
-    <div class="quater"></div>
-    </div>
+      </div>
+
+      <div class="quater"></div>
+
+      <div class="quater"></div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+
+      <div class="quater"></div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+
+      <div class="small_box">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+      <div class="transperent"></div>
+    </section>
+
+
   </body>
 </html>
