--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
         <p>мерч шрифтовых иллюзий impress</p>
       </div>
 
+      <div class="quater transperent"></div>
       <div class="quater"></div>
 
-      <div class="quater"></div>
-      <div class="quater"></div>
-      <div class="quater"></div>
-      <div class="quater"></div>
-
-      <div class="quater"></div>
-      <div class="quater"></div>
-      <div class="quater"></div>
-      <div class="quater"></div>
-      <div class="quater"></div>
+      <div class="quater big b_1"></div>
+      <div class="quater big b_2"></div>
+      <div class="quater big b_3"></div>
+      <div class="quater big b_4"></div>
 
       <div class="small_box">
         <div class="quater small "></div>
@@ -38,9 +33,48 @@
         <div class="quater small "></div>
         <div class="quater small "></div>
       </div>
+      <div class="small_box">
+        <div class="quater small "></div>
+        <div class="quater small transperent"></div>
+        <div class="quater small "></div>
+        <div class="quater small transperent"></div>
+      </div>
+
+      <div class="quater"></div>
+      <div class="quater transperent"></div>
+      <div class="quater"></div>
+      <div class="quater"></div>
+
+      <div class="small_box">
+        <div class="quater small transperent "></div>
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
       <div class="quater"></div>
       <div class="quater"></div>
       <div class="transperent"></div>
+
+      <div class="small_box">
+        <div class="quater small transperent"></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box">
+        <div class="quater small "></div>
+      </div>
+
+
+      <!-- <div class="small_box">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div> -->
+      <div class="transperent"></div>
+<div class="btn"><p>начать</p></div>
+
+<div class="footer"></div>
+
     </section>
 
 
