--- a/index.html
+++ b/index.html
@@ -62,8 +62,35 @@
       <div class="small_box">
         <div class="quater small "></div>
       </div>
+      <div class="transperent"></div>
+      <div class="transperent"></div>
 
+      <div class="small_box_1">
+        <div class="quater small transperent"></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box_1"></div>
+      <div class="small_box_1"></div>
+      <div class="small_box_1"></div>
+      <div class="small_box_1"></div>
 
+      <div class="small_box_1">
+        <div class="quater small transperent"></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box_1"></div>
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
       <!-- <div class="small_box">
         <div class="quater small "></div>
         <div class="quater small "></div>
@@ -72,6 +99,9 @@
       </div> -->
       <div class="transperent"></div>
 <div class="btn"><p>начать</p></div>
+
+
+
 
 <div class="footer"></div>
 
