--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
 
 
 
+<div class="footer">
+  <div class="info"></div>
+  <div class="disco">
 
-<div class="footer"></div>
+  </div>
+ </div>
 
     </section>
 
