--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
 
   </div>
  </div>
+    </section>
+    <!-- <section class="setka blocker"> -->
+
+    <section class="setka blocker">
+      <div class="top_bar">
+        <div class="top_text"><p>Выбор сетки</p></div>
+        <div class="btn_dalee"><p>Далее</p></div>
+      </div>
+
+
 
     </section>
 
