--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section class="setka blocker">
       <div class="top_bar">
         <div class="top_text"><p>Выбор сетки</p></div>
-        <div class="btn_dalee"><p>Далее</p></div>
+        <div class="btn_dalee"><p>Далее</p><div class="arrow"></div></div>
       </div>
 
 
