--- a/index.html
+++ b/index.html
@@ -114,9 +114,18 @@
     <section class="setka blocker">
       <div class="top_bar">
         <div class="top_text"><p>Выбор сетки</p></div>
-        <div class="btn_dalee"><p>Далее</p><div class="arrow"></div></div>
+        <div class="btn_dalee">
+          <p>Далее</p>
+          <div class="arrow"><img src="images/arrow.svg" alt=""></div>
+        </div>
       </div>
 
+<div class="conteiner_2">
+  <div class="square_2"></div>
+  <div class="square_2"></div>
+  <div class="square_2"></div>
+  <div class="square_2"></div>
+</div>
 
 
     </section>
