--- a/index.html
+++ b/index.html
@@ -91,6 +91,38 @@
         <div class="quater small "></div>
         <div class="quater small "></div>
       </div>
+
+
+
+
+
+
+
+
+
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box_1"></div>
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+
+      <div class="transperent"></div>
+      <div class="transperent"></div>
+      <div class="transperent"></div>
+      <div class="transperent"></div>
+      <div class="small_box_1">
+        <div class="quater small "></div>
+        <div class="quater small "></div>
+      </div>
+
       <!-- <div class="small_box">
         <div class="quater small "></div>
         <div class="quater small "></div>
@@ -111,21 +143,49 @@
     </section>
     <!-- <section class="setka blocker"> -->
 
-    <section class="setka blocker">
+    <section class="setka hidden blocker">
       <div class="top_bar">
         <div class="top_text"><p>Выбор сетки</p></div>
         <div class="btn_dalee">
           <p>Далее</p>
-          <div class="arrow"><img src="images/arrow.svg" alt=""></div>
+          <div class="arrow">
+            <img src="images/arrow.svg" alt="">
+            <!-- <img src="images/arrow.svg" alt=""> -->
+          </div>
+
         </div>
       </div>
 
-      <div class="conteiner_2">
-        <div class="square_2"></div>
-        <div class="square_2"></div>
-        <div class="square_2"></div>
-        <div class="square_2"></div>
-      </div>
+<div class="center_gap">
+        <div class="conteiner_2">
+          <div class="square_2"></div>
+          <div class="square_2"></div>
+          <div class="square_2"></div>
+          <div class="square_2"></div>
+        </div>
+        <p>2*2</p>
+        <div class="conteiner_4">
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+          <div class="square_4"></div>
+        </div>
+        <p>4*4</p>
+</div>
+
+<div class="footer_2p"></div>
 
   </section>
 
