--- a/index.html
+++ b/index.html
@@ -92,14 +92,6 @@
         <div class="quater small "></div>
       </div>
 
-
-
-
-
-
-
-
-
       <div class="small_box_1">
         <div class="quater small "></div>
         <div class="quater small "></div>
@@ -163,7 +155,7 @@
           <div class="square_2"></div>
           <div class="square_2"></div>
         </div>
-        <p>2*2</p>
+        <!-- <p>2*2</p> -->
         <div class="conteiner_4">
           <div class="square_4"></div>
           <div class="square_4"></div>
@@ -182,12 +174,16 @@
           <div class="square_4"></div>
           <div class="square_4"></div>
         </div>
-        <p>4*4</p>
+        <!-- <p>4*4</p> -->
 </div>
 
 <div class="footer_2p"></div>
 
   </section>
+<section class="redactor">
+
+</section>
+
 
 
   </body>
