--- a/index.html
+++ b/index.html
@@ -180,7 +180,24 @@
 <div class="footer_2p"></div>
 
   </section>
-<section class="redactor">
+<section class="redactor hidden blocker">
+
+  <div class="top_bar">
+    <div class="top_text"><p>Редактор</p></div>
+    <div class="btn_dalee">
+      <p>Далее</p>
+      <div class="arrow">
+        <img src="images/arrow.svg" alt="">
+        <!-- <img src="images/arrow.svg" alt=""> -->
+      </div>
+    </div>
+  </div>
+
+
+<div class="center_gap"></div>
+
+  <div class="footer_2p"></div>
+
 
 </section>
 
