--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
   </div>
 
 
-<div class="center_gap"></div>
+<div class="center_gap_3p">
+  <div class="redactor_div"></div>
+</div>
 
   <div class="footer_2p"></div>
 
