--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
 
   <div class="top_bar">
     <div class="top_text"><p>Редактор</p></div>
+
+<div class="btn_trans"></div>
+
     <div class="btn_dalee">
       <p>Далее</p>
       <div class="arrow">
@@ -195,7 +198,25 @@
 
 
 <div class="center_gap_3p">
-  <div class="redactor_div"></div>
+  <div class="redactor_div">
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+
+  </div>
 </div>
 
   <div class="footer_2p"></div>
