--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 
 
 <div class="footer">
-  <div class="info"></div>
-  <div class="disco">
+  <div class="inf_icon"></div>
+  <div class="disco_icon">
 
   </div>
  </div>
@@ -140,10 +140,7 @@
         <div class="top_text"><p>Выбор сетки</p></div>
         <div class="btn_dalee">
           <p>Далее</p>
-          <div class="arrow">
-            <img src="images/arrow.svg" alt="">
-            <!-- <img src="images/arrow.svg" alt=""> -->
-          </div>
+          <div class="arrow_mask"></div>
 
         </div>
       </div>
@@ -189,10 +186,7 @@
 
     <div class="btn_dalee">
       <p>Далее</p>
-      <div class="arrow">
-        <img src="images/arrow.svg" alt="">
-        <!-- <img src="images/arrow.svg" alt=""> -->
-      </div>
+      <div class="arrow_mask"></div>
     </div>
   </div>
 
