--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <div class="footer">
   <div class="inf_icon"></div>
+  <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
   <div class="disco_icon">
 
   </div>
