--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
 <div class="footer">
   <div class="inf_icon"></div>
   <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
-  <div class="disco_icon">
-
-  </div>
+  <div class="disco_icon"></div>
  </div>
     </section>
     <!-- <section class="setka blocker"> -->
@@ -214,9 +212,13 @@
   </div>
 </div>
 
-  <div class="footer_2p"></div>
-
-
+  <div class="footer_2p">
+    <div class="footer">
+      <div class="inf_icon"></div>
+      <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+      <div class="disco_icon"></div>
+     </div>
+</div>
 </section>
 
 
