--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="javascript/jQuere.3.5.1.js"></script>
 <script src="javascript/js.js"></script>
 
@@ -173,7 +174,13 @@
         <!-- <p>4*4</p> -->
 </div>
 
-<div class="footer_2p"></div>
+<div class="footer_2p">
+  <div class="footer">
+    <div class="inf_icon"></div>
+    <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+    <div class="disco_icon"></div>
+   </div>
+</div>
 
   </section>
 <section class="redactor hidden blocker">
@@ -221,6 +228,53 @@
 </div>
 </section>
 
+<section class="dragg hidden blocker">
+  <div class="top_bar">
+    <div class="top_text"><p>Выбор сетки</p></div>
+    <div class="btn_dalee">
+      <p>Далее</p>
+      <div class="arrow_mask"></div>
+    </div>
+  </div>
+
+  <div class="center_gap_3p"></div>
+
+
+  <div class="footer_2p">
+    <div class="footer">
+      <div class="inf_icon"></div>
+      <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+      <div class="disco_icon"></div>
+     </div>
+</div>
+
+
+
+
+</section>
+
+
+<section class="final hidden blocker">
+
+  <div class="top_bar">
+    <div class="top_text"><p>Выбор сетки</p></div>
+    <div class="btn_dalee">
+      <p>Далее</p>
+      <div class="arrow_mask"></div>
+    </div>
+  </div>
+
+  <div class="center_gap_3p"></div>
+
+
+  <div class="footer_2p">
+    <div class="footer">
+      <div class="inf_icon"></div>
+      <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+      <div class="disco_icon"></div>
+     </div>
+</div>
+</section>
 
 
   </body>
