--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 <section class="dragg hidden blocker">
   <div class="top_bar">
-    <div class="top_text"><p>Выбор сетки</p></div>
+    <div class="top_text"><p>Наложение</p></div>
     <div class="btn_dalee">
       <p>Далее</p>
       <div class="arrow_mask"></div>
@@ -257,7 +257,7 @@
 <section class="final hidden blocker">
 
   <div class="top_bar">
-    <div class="top_text"><p>Выбор сетки</p></div>
+    <div class="top_text"><p>Наложение</p></div>
     <div class="btn_dalee">
       <p>Далее</p>
       <div class="arrow_mask"></div>
