--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <div class="footer_2p">
   <div class="footer">
     <div class="inf_icon"></div>
-    <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+    <div class="comments"><p class=" black">Выбери сетку для будущего макета.</p></div>
     <div class="disco_icon"></div>
    </div>
 </div>
@@ -222,7 +222,7 @@
   <div class="footer_2p">
     <div class="footer">
       <div class="inf_icon"></div>
-      <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+      <div class="comments"><p class=" black">Вращайте фигуры, меняйте их цвет.</p></div>
       <div class="disco_icon"></div>
      </div>
 </div>
@@ -243,7 +243,7 @@
   <div class="footer_2p">
     <div class="footer">
       <div class="inf_icon"></div>
-      <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+      <div class="comments"><p class=" black">Примерьте свой принт.</p></div>
       <div class="disco_icon"></div>
      </div>
 </div>
@@ -270,7 +270,7 @@
   <div class="footer_2p">
     <div class="footer">
       <div class="inf_icon"></div>
-      <div class="comments"><p>Нажмите кнопку «Начать» для продолжения.</p></div>
+      <div class="comments"><p class=" black">Нажмите кнопку «Начать» для продолжения.</p></div>
       <div class="disco_icon"></div>
      </div>
 </div>
