--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="stylesheets/style.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https:////code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="javascript/jQuere.3.5.1.js"></script>
 <script src="javascript/js.js"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
+<!-- <script>
 $( function() {
   $( "#draggable" ).draggable();
 } );
-</script>
-<!-- <script type="text/javascript">
-
 </script> -->
+
+
 
   </head>
   <body>
@@ -246,13 +244,8 @@ $( function() {
     </div>
   </div>
 
-  <div class="center_gap_3p">
-
-<div class="blue" id="draggable">
-
-</div>
-
-
+  <div class="center_gap_3p" id="containment-wrapper">
+<div class="blue" id="draggable"></div>
   </div>
 
 
