--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ $( function() {
   </div>
 
 
-<div class="center_gap_3p">
-  <div class="redactor_div">
+<div class="center_gap_3p" >
+  <div class="redactor_div" id="redactor_id">
     <div class="red_square"></div>
     <div class="red_square"></div>
     <div class="red_square"></div>
@@ -273,7 +273,12 @@ $( function() {
     </div>
   </div>
 
-  <div class="center_gap_3p"></div>
+  <div class="center_gap_3p">
+<div class="s_p_btn"><p>сохранение</p>
+
+</div>
+
+  </div>
 
 
   <div class="footer_2p">
