--- a/index.html
+++ b/index.html
@@ -204,8 +204,11 @@ $( function() {
   </div>
 
 
-<div class="center_gap_3p" >
-  <div class="redactor_div" id="redactor_id">
+<div class="center_gap_3p" id="redactor_id" >
+  <div >
+
+  </div>
+  <!-- <div class="redactor_div">
     <div class="red_square"></div>
     <div class="red_square"></div>
     <div class="red_square"></div>
@@ -223,7 +226,7 @@ $( function() {
     <div class="red_square"></div>
     <div class="red_square"></div>
 
-  </div>
+  </div> -->
 </div>
 
   <div class="footer_2p">
