--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@ $( function() {
   </div>
 
 
-<div class="center_gap_3p" id="redactor_id" >
-  <div >
+<div class="center_gap_3p " id="redactor_id" ><div >
 
   </div>
   <!-- <div class="redactor_div">
@@ -247,8 +246,10 @@ $( function() {
     </div>
   </div>
 
-  <div class="center_gap_3p" id="containment-wrapper">
-<div class="blue" id="draggable"></div>
+  <div class="center_gap_3p" >
+    <div class="drug" id="containment-wrapper"></div>
+      <div class="blue" id="draggable"></div>
+<div class="photo"></div>
   </div>
 
 
