--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ $( function() {
     <section class="setka hidden blocker">
       <div class="top_bar">
         <div class="top_text"><p>Выбор сетки</p></div>
-        <div class="btn_dalee">
+        <div class="btn_dalee" id="btn_1">
           <p>Далее</p>
           <div class="arrow_mask"></div>
 
