--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ $( function() {
     </section>
     <!-- <section class="setka blocker"> -->
 
-    <section class="setka hidden blocker">
+    <section class="blocker setka hidden ">
       <div class="top_bar">
         <div class="top_text"><p>Выбор сетки</p></div>
         <div class="btn_dalee" id="btn_1">
@@ -193,7 +193,7 @@ $( function() {
 </div>
 
   </section>
-<section class="redactor hidden blocker">
+<section class="blocker redactor hidden">
 
   <div class="top_bar">
     <div class="top_text"><p>Редактор</p></div>
@@ -207,28 +207,38 @@ $( function() {
   </div>
 
 
-<div class="center_gap_3p " id="redactor_id" ><div >
-
+<div class="center_gap_4p " >
+  <!-- <div  id="redactor_id"></div> -->
+  <div class="blocker redactor_div ">
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
+    <div class="red_square"></div>
   </div>
-  <!-- <div class="redactor_div">
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
-    <div class="red_square"></div>
 
-  </div> -->
+  <div class="blocker redactor_div_2">
+    <div class="red_square_2"></div>
+    <div class="red_square_2"></div>
+    <div class="red_square_2"></div>
+    <div class="red_square_2"></div>
+  </div>
+
+
+
+
+
 </div>
 
   <div class="footer_2p">
