--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ $( function() {
     </div>
   </div>
 
-  <div class="center_gap_3p" >
+  <div class="center_gap_3p">
     <div class="drug" id="containment-wrapper"></div>
       <div class="blue" id="draggable"></div>
 <div class="photo"></div>
@@ -283,7 +283,7 @@ $( function() {
 <section class="final hidden blocker">
 
   <div class="top_bar">
-    <div class="top_text"><p>Наложение</p></div>
+    <div class="top_text"><p>Готовый проект</p></div>
     <div class="btn_dalee">
       <p>Далее</p>
       <div class="arrow_mask"></div>
@@ -291,11 +291,10 @@ $( function() {
   </div>
 
   <div class="center_gap_3p">
-<div class="s_p_btn"><p>сохранение</p>
-
+<div class="last_photo"  id="portable_2"></div>
+<div class="s_p_btn"><p>Сохранить</p></div>
+<div class="p_p_btn"><p>Напечатать</p></div>
 </div>
-
-  </div>
 
 
   <div class="footer_2p">
