--- a/index.html
+++ b/index.html
@@ -285,15 +285,16 @@ $( function() {
   <div class="top_bar">
     <div class="top_text"><p>Готовый проект</p></div>
     <div class="btn_dalee">
-      <p>Далее</p>
+      <p>В начало</p>
       <div class="arrow_mask"></div>
     </div>
   </div>
 
   <div class="center_gap_5p">
 <div class="last_photo"  id="portable_2"></div>
-<div class="s_p_btn"><p>Сохранить</p></div>
-<div class="p_p_btn"><p>Напечатать</p></div>
+<!-- <div class="s_p_btn"><p>Сохранить</p></div> -->
+
+<a  href="javascript:(print());"><div class="p_p_btn"><p>Напечатать</p></div></a>
 </div>
 
 
