--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ $( function() {
   </div>
 
 
-  <div class="footer_2p">
+  <div class="footer_2p"В
     <div class="footer">
       <div class="inf_icon"></div>
       <div class="comments"><p class=" black">Примерьте свой принт.</p></div>
