--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $( function() {
 
 <div class="center_gap_4p " >
   <!-- <div  id="redactor_id"></div> -->
-  <div class="blocker redactor_div ">
+  <div class="blocker redactor_div " id="import">
     <div class="red_square"></div>
     <div class="red_square"></div>
     <div class="red_square"></div>
@@ -228,7 +228,7 @@ $( function() {
     <div class="red_square"></div>
   </div>
 
-  <div class="blocker redactor_div_2">
+  <div class="blocker redactor_div_2" id="import">
     <div class="red_square_2"></div>
     <div class="red_square_2"></div>
     <div class="red_square_2"></div>
@@ -266,7 +266,7 @@ $( function() {
   </div>
 
 
-  <div class="footer_2p"В
+  <div class="footer_2p">
     <div class="footer">
       <div class="inf_icon"></div>
       <div class="comments"><p class=" black">Примерьте свой принт.</p></div>
