--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@ $( function() {
   </div>
 
   <div class="center_gap_3p">
-    <div class="drug" id="containment-wrapper"></div>
+    <div class="drug" id="containment-wrapper">
       <div class="blue" id="draggable"></div>
+      </div>
 <div class="photo"></div>
   </div>
 
