--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>impress</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="images/x-icon.ico">
+<!-- <link rel="icon" type="image/x-icon" href="images/x-icon.ico"> -->
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="https:////code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
